feat: fix gradle